--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "inquirer": "^7.1.0",
     "mysql": "^2.18.1",
     "util": "^0.12.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
